apps_v2/manifests/_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
        - path: /ticker
          pathType: Prefix
          backend:
            service:
              name: simple-ticker-svc
              port:
                number: 5000
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: pingpong-svc
              port:
                number: 5001

# Had difficulties with the old v1 traefik.ingress.kubernetes.io/rule-type Path usage. Using IngressRoute based config.
