apps_v2/manifests/ingress-exercises.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: exercises
  name: dwk-ingressroute-exercises
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ticker`)
      kind: Rule
      services:
        - name: ticker-svc
          port: 5002
      middlewares:
        - name: strip-ticker-service-prefix
    - match: PathPrefix(`/pingpong`)
      kind: Rule
      services:
        - name: pingpong-svc
          port: 5001
      middlewares:
        - name: strip-pingpong-service-prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: exercises
  name: strip-pingpong-service-prefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: exercises
  name: strip-ticker-service-prefix
spec:
  stripPrefix:
    prefixes:
      - /ticker
