apps_v2/manifests/ingress-project.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: project
  name: dwk-ingressroute-project
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/todo`)
      kind: Rule
      services:
        - name: todo-app-frontend-svc
          port: 5000
      middlewares:
        - name: strip-todo-frontend-service-prefix
    - match: PathPrefix(`/todo/api`)
      kind: Rule
      services:
        - name: todo-app-backend-svc
          port: 5000
      middlewares:
        - name: strip-todo-backend-service-prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: project
  name: strip-todo-frontend-service-prefix
spec:
  stripPrefix:
    prefixes:
      - /todo
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: project
  name: strip-todo-backend-service-prefix
spec:
  stripPrefix:
    prefixes:
      - /todo/api
