apps_v2/manifests/traefik-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dwk-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ticker`)
      kind: Rule
      services:
        - name: ticker-svc
          port: 5002
      middlewares:
        - name: strip-ticker-service-prefix
    - match: PathPrefix(`/pingpong`)
      kind: Rule
      services:
        - name: pingpong-svc
          port: 5001
      middlewares:
        - name: strip-pingpong-service-prefix
    - match: PathPrefix(`/todo`)
      kind: Rule
      services:
        - name: todo-app-backend-svc
          port: 5000
      middlewares:
        - name: strip-todo-service-prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-pingpong-service-prefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-ticker-service-prefix
spec:
  stripPrefix:
    prefixes:
      - /ticker
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-todo-service-prefix
spec:
  stripPrefix:
    prefixes:
      - /todo
